fix: added hidden overflow to pagepanel

--- a/src/components/PagePanel.module.css
+++ b/src/components/PagePanel.module.css
@@ -5,6 +5,7 @@
   display: flex;
   height: var(--baseline-3x);
   justify-content: space-between;
+  overflow: hidden;
 }
 
 .description {
